--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,10 @@ import RafaPic from "../components/Rafa-pic.astro";
 
 <Layout title="Hirashiki Rafael's Nifty Journey on the web" headerIndex={true}>
     <Image
-      src="/Images/index-rafa2.png"
+      src="/Images/index-rafa2.webp"
       width={1100}
       height={940}
-      format="png"
+      format="webp"
       alt="web development applications icons and logos"
       class="m-auto w-full max-lg:max-w-2xl max-lg:mr-0 max-md:w-6/6"
     />
