animation and fixes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ const navObj = [
   },
   {
     path: "/a3",
-    navTitle: "A3",
+    navTitle: "Works at A3",
     navSubtitle: "Frontend",
   },
   {
@@ -135,13 +135,12 @@ const navObj = [
   <div
     class="relative col-start-2 col-span-full flex flex-col justify-between h-full pt-24 pr-4 max-lg:pt-0 max-lg:col-start-2 max-lg:col-span-10"
   >
-    <Image
+    <img
       src={headerIndex
         ? "/Images/stars-bottomleft-index.svg"
         : "/Images/stars-bottomleft.svg"}
       width={440}
       height={450}
-      format="svg"
       alt="stars bg"
       class="absolute bottom-0 -left-12 z-10"
     />
