--- a/src/components/ProjectLayout-Body.astro
+++ b/src/components/ProjectLayout-Body.astro
@@ -60,11 +60,11 @@
 <div class="relative col-start-3 col-span-9">
   <slot />
 
-  <div class="absolute h-2/3 w-10/12 -bottom-4 -right-12 -z-10">
-    <img src="/Images/square.svg" class="star star-top star-right" />
+  <div class="absolute h-2/3 w-10/12 -bottom-4 -right-16 -z-10">
+    <img src="/Images/shape-square.svg" class="star star-top star-right" />
     <div class="v-bar"></div>
     <div class="h-bar"></div>
-    <img src="/Images/square.svg" class="star star-btm star-left" />
-    <img src="/Images/square.svg" class="star star-btm star-right" />
+    <img src="/Images/shape-square.svg" class="star star-btm star-left" />
+    <img src="/Images/shape-square.svg" class="star star-btm star-right" />
   </div>
 </div>
