--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -219,8 +219,8 @@ const projects = await getCollection("projects");
       }
       .url-logo-black {
         background-color: black;
-        width: 40px;
-        height: 40px;
+        width: 42px;
+        height: 42px;
         border-radius: 5px;
         padding: 5px;
         font-size: 26px;
@@ -249,7 +249,7 @@ const projects = await getCollection("projects");
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(4.8px);
         -webkit-backdrop-filter: blur(4.8px);
-        border: 1px solid rgba(255, 255, 255, 1);
+        border: 2px solid var(--clr-coder);
         color: var(--clr-bg);
       }
       .css-no-scrollbar {
