--- a/src/pages/a3.astro
+++ b/src/pages/a3.astro
@@ -23,7 +23,6 @@ const a3Projects: Project[] = [
         "Adapted Design Concepts to Better Solutions on The Frontend for FCP, LCP, etc.",
         "Reached Above 90 Points in Performance During the Release Time.",
         "Applied Downloaded Fonts in WOFF2 Format to Improve Page Performance.",
-        "Reached Above 90 Points in Performance During the Release Time.",
     ],
   },
   {
@@ -64,7 +63,16 @@ const a3Projects: Project[] = [
   <ProjectLayoutBody>
     <p class="italic text-2xl clr-brand-orange">Solo Frontend Coder For All Projects</p>
     {a3Projects?.map((proj, i) => (
-        <H2ProjectTitle text={`${i+1}.${proj.title}`} class="italic text-2xl font-bold pt-20 pb-4"/>
+        <div class="flex items-center pt-20 pb-4 gap-3">
+        <H2ProjectTitle text={`${i+1}.${proj.title}`} class="italic text-2xl font-bold"/>      
+        <a
+        href={proj.url}
+        class="flex flex-col items-center w-fit"
+        target="_blank"
+      >
+        <i class="fa-solid fa-arrow-up-right-from-square" />
+      </a>
+    </div>
         <a href={proj.url} target="_blank">
         <Image
             src={`/Images/${proj.thumbnail}.webp`}
