--- a/src/components/ProjectLayout-Links.astro
+++ b/src/components/ProjectLayout-Links.astro
@@ -101,13 +101,15 @@ const { project, road } = Astro.props;
     <div class="relative h-bar-container">
       <i class="fa-solid fa-circle star -top-3 -left-1 text-xl opacity-100"></i>
       <div class="h-bar"></div>
-      <i class="fa-solid fa-circle star -top-3 -right-4 text-xl opacity-100"></i>
+      <i class="fa-solid fa-circle star -top-3 -right-4 text-xl opacity-100"
+      ></i>
       <div class="d-barup"></div>
     </div>
     <div class="relative v-bar-container">
       <i class="fa-solid fa-circle star -top-2 -left-2 text-xl opacity-100"></i>
       <div class="v-bar"></div>
-      <i class="fa-solid fa-circle star -bottom-2 -left-2 text-xl opacity-100"></i>
+      <i class="fa-solid fa-circle star -bottom-2 -left-2 text-xl opacity-100"
+      ></i>
       <div class="d-bar"></div>
     </div>
   </div>
@@ -118,14 +120,7 @@ const { project, road } = Astro.props;
       class="flex flex-col items-center w-fit"
       target="_blank"
     >
-      <Image
-        src="/Images/logo_github.png"
-        width={144}
-        height={213}
-        format="png"
-        alt="github logo"
-        class="url-logo-black"
-      />
+      <i class="fa-brands fa-github url-logo-black url-logo-github "></i>
       <p>Github</p>
     </a>
 
