--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -229,6 +229,9 @@ const projects = await getCollection("projects");
         justify-content: center;
         align-items: center;
       }
+      .url-logo-github {
+        font-size: 36px;
+      }
       .url-logo {
         background-color: transparent;
         width: 42px;
