header toggle button

--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -1,11 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import ProjectLayoutLinks from "./ProjectLayout-Links.astro";
-import H2ProjectTitle from "./H2project-title.astro";
 import ProjectLayoutBody from "./ProjectLayout-Body.astro";
 import ProjectLayouHead from "./ProjectLayou-Head.astro";
 
-const { project, sysdev, road } = Astro.props;
+const { project  } = Astro.props;
 
 ---
 <Layout>
